--- a/.github/workflows/develop_g6-m3-ms-iclab.yml
+++ b/.github/workflows/develop_g6-m3-ms-iclab.yml
@@ -23,6 +23,12 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+      
+      - name: Test with Maven
+        run: mvn clean test -e
+      
+      - name: Package with Maven
+        run: mvn clean package -e
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
